--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}/src/app.js"
+            // "program": "${workspaceFolder}/lixo/main.js"
 
         }
     ]
