--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "prettier.trailingComma": "all",
+    "prettier.proseWrap": "preserve",
+    "prettier.printWidth": 100
 }
