--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.14.0",
+    "@types/express": "^4.17.21",
     "axios": "^1.6.2",
     "discord-interactions": "^3.4.0",
     "dotenv": "^16.0.3",
@@ -24,6 +25,5 @@
     "sodium-native": "^4.0.1",
     "ws": "^8.15.0",
     "ytdl-core": "^4.11.2"
-  },
-  "devDependencies": {}
+  }
 }
