--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "author": "Carlos",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
-    "@discordjs/voice": "^0.14.0",
     "@types/express": "^4.17.21",
     "axios": "^1.6.2",
     "discord-interactions": "^3.4.0",
@@ -21,9 +19,11 @@
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "node-fetch": "^3.3.0",
-    "prism-media": "^1.3.5",
-    "sodium-native": "^4.0.1",
+    "sodium-native": "^4.0.10",
     "ws": "^8.15.0",
     "ytdl-core": "^4.11.2"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.5.10"
   }
 }
